--- a/day8/quiz.html
+++ b/day8/quiz.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -106,59 +105,26 @@ input:focus {
         </div>
 
     <script>
-let quiz = [
-  {
-    id: 1,
-    type: "short_answer",
-    question: "Why is the sky blue?",
-    answers: [],
-    correct_answer: 0,
-  },
-  {
-    id: 2,
-    type: "multiple_choice",
-    question: "Why is the sky blue?",
-    answers: [
-      { id: 1, answer: "Because of physics" },
-      { id: 2, answer: "Because that the way it always was" },
-      { id: 3, answer: "I don't know" },
-    ],
-    correct_answer: 1,
-  },
-  {
-    id: 3,
-    type: "multiple_selection_choice",
-    question: "Why is the sky blue?",
-    answers: [
-      { id: 1, answer: "Because of physics" },
-      { id: 2, answer: "Because that the way it always was" },
-      { id: 3, answer: "I don't know" },
-    ],
-    correct_answer: 1,
-  },
-  {
-    id: 4,
-    type: "long_text",
-    question: "Why is the sky blue?",
-    answers: [],
-    correct_answer: 0,
-  },
-  {
-    id: 5,
-    type: "description",
-    question: "random text to show to the user",
-    answers: [],
-    correct_answer: 0,
-  },
-  {
-    id: 6,
-    type: "true_false",
-    question: "Is the sky blue",
-    answers: [],
-    correct_answer: 2,
-  },
-];
+      
 
+async function fetchQuizData() {
+    try {
+        const response = await fetch('http://localhost:3000/quiz'); 
+        if (!response.ok) {
+            throw new Error('Failed to fetch quiz data');
+        }
+        const data = await response.json();
+        return data.map(question => ({
+            ...question,
+            answers: JSON.parse(question.answers)
+        }));
+    } catch (error) {
+        console.error('Error fetching quiz data:', error);
+        return [];
+    }
+}
+
+let quiz = [];
 let nextButton = document.getElementById("next");
 let title = document.getElementById("title");
 let selectionList = document.getElementById("selectionList");
@@ -171,107 +137,117 @@ let i = 0;
 
 let answers = {};
 
-//step
-nextButton.onclick = function () {
-  //get the answers
-  if (quiz[i].type == "short_answer") {
-    let x = document.getElementsByClassName("current")[0];
-    let currentAnswer = x.value;
-    let question = quiz[i].question;
-    let answer = { [question]: currentAnswer };
-    answers = { ...answers, [quiz[i].id]: { ...answer } };
-    x.classList.toggle("hidden");
-    x.classList.remove("current");
-  } else if (
-    quiz[i].type == "multiple_choice" ||
-    quiz[i].type == "multiple_selection_choice"
-  ) {
-    let x = document.querySelector(`input[name="question${i}_choice"]`);
-    let currentAnswer = x.value;
-    let question = quiz[i].question;
-    let answer = { [question]: currentAnswer };
-    answers = { ...answers, [quiz[i].id]: { ...answer } };
-    x.classList.toggle("hidden");
-  } else if (quiz[i].type == "long_text" || quiz[i].type == "description") {
-    let x = document.getElementsByClassName("current")[0];
-    let currentAnswer = x.value;
-    let question = quiz[i].question;
-    let answer = { [question]: currentAnswer };
-    answers = { ...answers, [quiz[i].id]: { ...answer } };
-    x.classList.toggle("hidden");
-    x.classList.remove("current");
-  } else if (quiz[i].type == "true_false") {
-    let x = document.querySelector("input[name=bool]");
-    let currentAnswer = x.value;
-    let question = quiz[i].question;
-    let answer = { [question]: currentAnswer };
-    answers = { ...answers, [quiz[i].id]: { ...answer } };
-    x.classList.toggle("hidden");
-  }
-  console.log(i);
-  ++i;
-  if (i > quiz.length - 1) {
-    //display answer
-    questionsDiv.classList.toggle("hidden");
-    yourAnswers.classList.toggle("hidden");
-    const myJSON = JSON.stringify(answers, null, "\t");
-    document.getElementById("answerObject").innerHTML = myJSON;
-    return;
-  }
-  populateQuestion(i);
+
+nextButton.onclick = async function () {
+    //get the answers
+    if (quiz[i].type == "short_answer") {
+        let x = document.getElementsByClassName("current")[0];
+        let currentAnswer = x.value;
+        let question = quiz[i].question;
+        let answer = { [question]: currentAnswer };
+        answers = { ...answers, [quiz[i].id]: { ...answer } };
+        x.classList.toggle("hidden");
+        x.classList.remove("current");
+    } else if (
+        quiz[i].type == "multiple_choice" ||
+        quiz[i].type == "multiple_selection_choice"
+    ) {
+        let x = document.querySelector(`input[name="question${i}_choice"]`);
+        let currentAnswer = x.value;
+        let question = quiz[i].question;
+        let answer = { [question]: currentAnswer };
+        answers = { ...answers, [quiz[i].id]: { ...answer } };
+        x.classList.toggle("hidden");
+    } else if (quiz[i].type == "long_text" || quiz[i].type == "description") {
+        let x = document.getElementsByClassName("current")[0];
+        let currentAnswer = x.value;
+        let question = quiz[i].question;
+        let answer = { [question]: currentAnswer };
+        answers = { ...answers, [quiz[i].id]: { ...answer } };
+        x.classList.toggle("hidden");
+        x.classList.remove("current");
+    } else if (quiz[i].type == "true_false") {
+        let selectedInput = document.querySelector("input[name=bool]:checked");
+        if (selectedInput) {
+            let currentAnswer = selectedInput.value;
+            let question = quiz[i].question;
+            let answer = { [question]: currentAnswer };
+            answers = { ...answers, [quiz[i].id]: { ...answer } };
+        }
+        // 
+    }
+    console.log(i);
+    ++i;
+    if (i > quiz.length - 1) {
+        //display answer
+        questionsDiv.classList.toggle("hidden");
+        yourAnswers.classList.toggle("hidden");
+        const myJSON = JSON.stringify(answers, null, "\t");
+        document.getElementById("answerObject").innerHTML = myJSON;
+        return;
+    }
+    await populateQuestion(i);
 };
 
-//generate question
-function populateQuestion(qNum) {
-  let individualQuestion = quiz[qNum];
-  title.innerText = individualQuestion.question;
-
-  //condition to check type of question
-
-  if (individualQuestion.type == "short_answer") {
-    selectionList.innerHTML = "";
-    short.classList.toggle("hidden");
-    short.classList.add("current");
-    short.placeholder = "your reason here";
-  } else if (
-    individualQuestion.type == "multiple_choice" ||
-    individualQuestion.type == "multiple_selection_choice"
-  ) {
-    selectionList.innerHTML = ""; //reset choices list
-    for (j in individualQuestion.answers) {
-      let radioBtnName = "question" + qNum + "_choice";
-      let choiceText = individualQuestion.answers[j].answer;
-      selectionList.appendChild(createLi(radioBtnName, choiceText));
+async function populateQuestion(qNum) {
+    if (quiz.length === 0) {
+        quiz = await fetchQuizData();
     }
-  } else if (
-    individualQuestion.type == "long_text" ||
-    individualQuestion.type == "description"
-  ) {
-    selectionList.innerHTML = "";
-    long.classList.toggle("hidden");
-    long.classList.add("current");
-    long.placeholder = "your reason here";
-  } else if (individualQuestion.type == "true_false") {
-    selectionList.innerHTML = "";
-    bool.appendChild(createLi("bool", "True"));
-    bool.appendChild(createLi("bool", "True"));
-  }
+
+    let individualQuestion = quiz[qNum];
+    if (!individualQuestion) {
+        console.error('No question found for index:', qNum);
+        return;
+    }
+
+    title.innerText = individualQuestion.question;
+
+    //condition to check type of question
+
+    if (individualQuestion.type == "short_answer") {
+        selectionList.innerHTML = "";
+        short.classList.remove("hidden");
+        short.classList.add("current");
+        short.placeholder = "your reason here";
+    } else if (
+        individualQuestion.type == "multiple_choice" ||
+        individualQuestion.type == "multiple_selection_choice"
+    ) {
+        selectionList.innerHTML = ""; //reset choices list
+        for (j in individualQuestion.answers) {
+            let radioBtnName = "question" + qNum + "_choice";
+            let choiceText = individualQuestion.answers[j].answer;
+            selectionList.appendChild(createLi(radioBtnName, choiceText));
+        }
+    } else if (
+        individualQuestion.type == "long_text" ||
+        individualQuestion.type == "description"
+    ) {
+        selectionList.innerHTML = "";
+        long.classList.remove("hidden");
+        long.classList.add("current");
+        long.placeholder = "your reason here";
+    } else if (individualQuestion.type == "true_false") {
+        selectionList.innerHTML = "";
+        bool.innerHTML = ""; // Clear previous options
+        bool.appendChild(createLi("bool", "True"));
+        bool.appendChild(createLi("bool", "False"));
+        bool.classList.remove("hidden");
+    }
 }
 
 //multiple choice
 function createLi(name, choiceText) {
-  let e = document.createElement("li");
-  let radioHtml =
-    '<input value="' + choiceText + '" type="radio" name="' + name + '"';
-  radioHtml += "/>";
-  radioHtml += choiceText;
-  e.innerHTML = radioHtml;
-  return e;
+    let e = document.createElement("li");
+    let radioHtml = `<input type="radio" name="${name}" value="${choiceText}">`;
+    radioHtml += choiceText;
+    e.innerHTML = radioHtml;
+    return e;
 }
 
-//call function at the beginning
-populateQuestion(i);
-
-    </script>
+document.addEventListener('DOMContentLoaded', async () => {
+    await populateQuestion(i);
+});
+</script>
 </body>
 </html>
